tests/ui/stability-attribute/renamed_feature.rs
#![feature(try_trait)] //~ ERROR feature `try_trait` has been renamed to `try_trait_v2` [E0635]

fn main() {}
